# FoodExpiryApp

./: .gitignore  FOOD_MODEL_SETUP.md  PROFILE_MODULE_IMPLEMENTATION.md  PROJECT_DOCUMENTATION.md  PROJECT_PROGRESS.md  README.md  README_FOODEXPIRYAPP.md  RECIPE_FEATURE_IMPLEMENTATION.md  ROBOFLOW_FOOD_MODEL_SETUP.md  Setup_for_Qwen3.5.md  StudyOnBetterLLM.md  YOLO_FOOD_SCANNER_DOCS.md  YOLO_SETUP.md  auto_annotate.py  build.gradle.kts  download_food_model.py  download_mmproj.py  download_model.py  download_roboflow_auto.py  download_roboflow_food_model.py  expirynotificationper-item.md  export_roboflow_food.py  export_yolo11.py  gradle.properties  manual_download_helper.py  prepare_dataset.py  project_memory.md  push_models.ps1  push_qwen_main.ps1  push_qwen_mmproj.ps1  redownload_wikimedia.py  relabel_dataset.py  session-ses_2dff.md  session-ses_33be.md  settings.gradle.kts  setup_foodvision_model.py  train_efficientnet.py  train_rocm_win.py  train_windows_cpu.py  train_yolo11_amd.py
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  execute_init.json  v2.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: always-duck.md  anr-rapid-tab-switch.md  inventory-blank-no-adapter.md  knowledge-base.md  model-download-crash-401.md  ollama-remote-migration.md  qwen-vision-hallucination-4444.md  receipt-scan-unknown.md  scan-ui-buttons-missing-and-nav-error.md  style-toggle-race-condition-crash.md  vision-scan-tflite-mnn.md
.planning/debug/resolved/: yolo-scan-camera-black-on-return.md
.planning/forensics/: report-20260409-171147.md
.planning/intel/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md
.planning/phases/01-main-flow-first/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-06-SUMMARY.md  01-HUMAN-UAT.md  01-REVIEW.md  01-UI-SPEC.md  01-VERIFICATION.md
.planning/phases/02-connect-modules/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-HUMAN-UAT.md  02-VERIFICATION.md
.planning/phases/03-polish-trust/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-UAT.md
.planning/phases/04-foundation/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-VERIFICATION.md
.planning/phases/05-engine/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-05-PLAN.md  05-05-SUMMARY.md  05-06-PLAN.md  05-06-SUMMARY.md  05-07-PLAN.md  05-07-SUMMARY.md  05-CONTEXT.md  05-DISCUSSION-LOG.md
.planning/phases/06-detection/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-04-SUMMARY.md  06-CONTEXT.md  06-DISCUSSION-LOG.md  06-REVIEW.md  06-VERIFICATION.md
.planning/phases/07-scan-ui/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-04-PLAN.md  07-04-SUMMARY.md  07-CONTEXT.md  07-DISCUSSION-LOG.md  07-VERIFICATION.md
.planning/phases/08-yolo-hardening/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-03-PLAN.md  08-04-PLAN.md  08-05-PLAN.md  08-06-PLAN.md  08-07-PLAN.md  08-08-PLAN.md  08-09-PLAN.md  08-10-PLAN.md  08-CONTEXT.md  08-DISCUSSION-LOG.md  08-RESEARCH.md
.planning/quick/: 260412-llm-sampling-experiment-SUMMARY.md
.planning/quick/260409-vki-improve-llm-few-shot-prompt-with-visual-/: 260409-vki-SUMMARY.md
.planning/quick/260411-precision-low/: 260411-precision-low-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
app/: build.gradle.kts  google-services.json  proguard-rules.pro
app/app/: build.gradle.kts
app/app/src/main/: AndroidManifest.xml
app/app/src/main/assets/: yolo_labels_crawled_grocery.txt
app/app/src/main/java/: FoodExpiryApp.kt
app/app/src/main/jni/: CMakeLists.txt
app/schemas/com.example.foodexpiryapp.data.local.database.AppDatabase/: 15.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: food_categories.txt  hk_recipes.json  recipes.json  yolo_labels.txt
app/src/main/cpp/: CMakeLists.txt  mnn_llm_bridge.cpp  mnn_yolo_bridge.cpp
app/src/main/java/: FoodExpiryApp.kt
app/src/main/jni/: CMakeLists.txt  llamajni.cpp  mnn_jni.cpp
app/src/main/res/anim/: float_animation.xml
app/src/main/res/color/: chip_background_color_selector.xml
app/src/main/res/drawable/: badge_background_quick.xml  bg_circle_gray.xml  bg_freshness_bar.xml  bg_hero_gradient.xml  bg_new_badge.xml  bg_quick_action_circle_blue.xml  bg_quick_action_circle_green.xml  bg_quick_action_circle_orange.xml  bg_quick_action_circle_purple.xml  bg_status_card.xml  ic_arrow_back.xml  ic_cat_empty.xml  ic_google.xml  ic_robot_illustration.xml  shape_circle_outline.xml  shape_circle_shutter_ring.xml  shape_circle_tertiary.xml  shape_corner_bl.xml  shape_corner_bl_bold.xml  (+10 more)
archive/sessions/: session-ses_34ac.md
docs/: AI_VISION_SCANNER.md  MNN_BUILD.md
docs/ml/: Qwen3.5-0.8bwithMLkit.md  YoloTraining.md
docs/superpowers/plans/: 2026-04-18-shelf-life-auto-learn.md
docs/superpowers/specs/: 2026-04-15-receipt-scan-fix-design.md
gradle/wrapper/: gradle-wrapper.properties
tools/ml/data_prep/: download_and_organize_data.py  download_food_ui_images.py  prepare_for_roboflow.py  redownload_food_images.py  verify_annotations.py
tools/ml/export/: convert_to_yolo_format.py  export_to_android.py
tools/ml/setup/: fix_api_key.py  setup_rocm_wsl2.py
tools/ml/training/: monitor_yolo_training.py  train_amd_directml.py  train_configurable.py  train_improved.py
yolo11n_saved_model/: fingerprint.pb  metadata.yaml
yolo11n_saved_model/variables/: variables.data-00000-of-00001  variables.index
(+296 files in other folders)
